--- a/davidhaller.html
+++ b/davidhaller.html
@@ -53,32 +53,37 @@
                 </p>
             </div>
         </article>
-        <article  id="impar" class="container" >
-            <div class="texto">
-                <h2>Dan Stevens</h2>
-                <p>
-                    Dan Stevens nació en la ciudad de Croydon, Surrey, (Londres) y creció en Gales y en el sureste de Inglaterra. Fue adoptado a los pocos días de nacer. Los padres de Stevens son profesores y tiene un hermano menor. Estudió en el colegio privado Tonbridge School, en Kent, donde audicionó para un pequeño papel en la obra Macbeth, donde se entrenaba en la actuación con el National Youth Theatre de Gran Bretaña. En el Emmanuel College de Cambridge estudió Literatura Inglesa y actuó en numerosas obras teatrales realizadas por su universidad.
+        <article  id="impar" class="container3">
+            <div class="container">
+                <div class="texto">
+                    <h2>Dan Stevens</h2>
+                    <p>
+                        Dan Stevens nació en la ciudad de Croydon, Surrey, (Londres) y creció en Gales y en el sureste de Inglaterra. Fue adoptado a los pocos días de nacer. Los padres de Stevens son profesores y tiene un hermano menor. Estudió en el colegio privado Tonbridge School, en Kent, donde audicionó para un pequeño papel en la obra Macbeth, donde se entrenaba en la actuación con el National Youth Theatre de Gran Bretaña. En el Emmanuel College de Cambridge estudió Literatura Inglesa y actuó en numerosas obras teatrales realizadas por su universidad.
+                        <br /><br />
+                        Está casado con la cantante de jazz y profesora de canto sudafricana Susie Hariet desde 2009. Tienen una hija llamada Willow que nació en 2009, un hijo llamado Aubrey que nació en 2012 y otra hija llamada Eden, nacida en 2016.456 La actriz Rebecca Hall es la madrina de su hija Willow.7se unió a la serie debido a la implicación del showrunner Noah Hawley en la misma, y después de explorar el material de origen. Stevens describió a la serie como "un viaje" y a su personaje como "realmente demente".
+                    </p>
                     <br /><br />
-                    Está casado con la cantante de jazz y profesora de canto sudafricana Susie Hariet desde 2009. Tienen una hija llamada Willow que nació en 2009, un hijo llamado Aubrey que nació en 2012 y otra hija llamada Eden, nacida en 2016.456 La actriz Rebecca Hall es la madrina de su hija Willow.7se unió a la serie debido a la implicación del showrunner Noah Hawley en la misma, y después de explorar el material de origen. Stevens describió a la serie como "un viaje" y a su personaje como "realmente demente".
-                </p>
-                <br /><br />
-
-                <h3>Trabajos destacados</h3>
-                <p>
-                    Dan Stevens interpretó recientemente a “La Bestia” en la exitosa película de acción real de Disney La Bella y la Bestia.
-                    <br /><br />
-                    Lo siguiente para Stevens es Call of the Wild con Harrison Ford y Lucy in the Sky de Noah Hawley para Fox Searchlight, protagonizada por Natalie Portman, Jon Hamm y Zazie Beetz sobre un astronauta casado que comienza una aventura al regresar a la Tierra.
-                    <br /><br />
-                    Otros proyectos incluyen interpretar a Charles Dickens en El hombre que inventó la Navidad, la comedia romántica Permission junto a Rebecca Hall, la película de punk rock Her Smell protagonizada por Elisabeth Moss y la próxima película de Gareth Evans Apostle, en la que Stevens interpreta a un hombre que va en busca de su desaparecido hermana.
-                    <br /><br />
-                    Anteriormente, Stevens protagonizó el éxito de culto The Guest, Night at the Museum III, A Walk Amongst the Tombstones, Criminal Activity, Colossal y The Ticket. Sus créditos televisivos incluyen el drama ganador del Globo de Oro® Downton Abbey, High Maintenance, Sense & Sensibility, The Line of Beauty y Frankenstein de HBO, así como papeles en las películas para televisión Maxwell y Dracula.
-                    <br /><br />
-                    Los créditos teatrales de Stevens incluyen The Heiress en Broadway, Arcadia, The Vortex and Hayfever en el West End y Every Good Boy Deserves Favor en el National Theatre de Londres.
-                </p>
-
+                </div>
+                <div id="dan" class="img-container"></div>
             </div>
-            <div id="dan" class="img-container"></div>
-        </article>
+            <div class="container2">
+                <div class="texto2" >
+                    <h3>Trabajos destacados</h3>
+                    <p>
+                        Dan Stevens interpretó recientemente a “La Bestia” en la exitosa película de acción real de Disney La Bella y la Bestia.
+                        <br /><br />
+                        Lo siguiente para Stevens es Call of the Wild con Harrison Ford y Lucy in the Sky de Noah Hawley para Fox Searchlight, protagonizada por Natalie Portman, Jon Hamm y Zazie Beetz sobre un astronauta casado que comienza una aventura al regresar a la Tierra.
+                        <br /><br />
+                        Otros proyectos incluyen interpretar a Charles Dickens en El hombre que inventó la Navidad, la comedia romántica Permission junto a Rebecca Hall, la película de punk rock Her Smell protagonizada por Elisabeth Moss y la próxima película de Gareth Evans Apostle, en la que Stevens interpreta a un hombre que va en busca de su desaparecido hermana.
+                        <br /><br />
+                        Anteriormente, Stevens protagonizó el éxito de culto The Guest, Night at the Museum III, A Walk Amongst the Tombstones, Criminal Activity, Colossal y The Ticket. Sus créditos televisivos incluyen el drama ganador del Globo de Oro® Downton Abbey, High Maintenance, Sense & Sensibility, The Line of Beauty y Frankenstein de HBO, así como papeles en las películas para televisión Maxwell y Dracula.
+                        <br /><br />
+                        Los créditos teatrales de Stevens incluyen The Heiress en Broadway, Arcadia, The Vortex and Hayfever en el West End y Every Good Boy Deserves Favor en el National Theatre de Londres.
+                    </p>
+                </div>
+            </div>
+</article>
+
     </section>
 
     <footer>
