--- a/galeria.html
+++ b/galeria.html
@@ -42,7 +42,7 @@
             </ul>
         </nav>
     </header>
-    <section id="galeria">
+    <section id="galería">
         <article class="principal">
             <div>
                 <h1>Galeria</h1>
@@ -51,13 +51,19 @@
 
             
         <article class="personajes">
-            <div> 
+            <div>
                 <a class="example-image-link" href="images/I1.jpg" data-lightbox="Legion" data-title="Portada del comic en el que fue basada la serie."><img class="example-image" src="images/I1_min.jpg" alt="Portada del comic en el que fue basada la serie." /></a>
                 <a class="example-image-link" href="images/I2.jpg" data-lightbox="Legion" data-title="David Haller mirando a camara."><img class="example-image" src="images/I2_min.jpg" alt="David Haller mirando a camara." /></a>
                 <a class="example-image-link" href="images/I3.jpg" data-lightbox="Legion" data-title="David usando sus poderes."><img class="example-image" src="images/I3_min.jpg" alt="David usando sus poderes." /></a>
                 <a class="example-image-link" href="images/I4.jpg" data-lightbox="Legion" data-title="David no puede controlar sus poderes."><img class="example-image" src="images/I4_min.jpg" alt="David no puede controlar sus poderes." /></a>
                 <a class="example-image-link" href="images/I5.jpg" data-lightbox="Legion" data-title="David conoce a Melanie."><img class="example-image" src="images/I5_min.jpg" alt="David conoce a Melanie." /></a>
                 <a class="example-image-link" href="images/I6.jpg" data-lightbox="Legion" data-title="Batalla entre David y Farouk."><img class="example-image" src="images/I6_min.jpg" alt="Batalla entre David y Farouk." /></a>
+                <a class="example-image-link" href="images/I7.jpg" data-lightbox="Legion" data-title="David y Lenny."><img class="example-image" src="images/I7_min.jpg" alt="David y Lenny." /></a>
+                <a class="example-image-link" href="images/I8.jpg" data-lightbox="Legion" data-title="David y su padre Xavier."><img class="example-image" src="images/I8_min.jpg" alt="David y su padre Xavier." /></a>
+                <a class="example-image-link" href="images/I9.jpg" data-lightbox="Legion" data-title="Pagina del comic Newmutants."><img class="example-image" src="images/I9_min.jpg" alt="Pagina del comic Newmutants." /></a>
+                <a class="example-image-link" href="images/I10.jpg" data-lightbox="Legion" data-title="Poster temporada tres."><img class="example-image" src="images/I10_min.jpg" alt="Poster temporada tres." /></a>
+                <a class="example-image-link" href="images/I11.jpg" data-lightbox="Legion" data-title="Syd."><img class="example-image" src="images/I11_min.jpg" alt="Syd." /></a>
+                <a class="example-image-link" href="images/I12.jpg" data-lightbox="Legion" data-title="David y Syd."><img class="example-image" src="images/I12_min.jpg" alt="David y Syd." /></a>
             </div>
 
 
