--- a/lennybusker.html
+++ b/lennybusker.html
@@ -53,31 +53,35 @@
                 </p>
             </div>
         </article>
-        <article  id="impar" class="container" >
-            <div class="texto">
-                <h2>Dan Stevens</h2>
-                <p>
-                    Aubrey Plaza interpreta al amigo de David, "Lenny Busker". A pesar de una vida de abuso de drogas y alcohol, Lenny, la amiga de David, sabe que cualquier día su vida va a cambiar, lo que le da la energía agradable del optimista imposible. En su nueva posición como mano derecha de David, Lenny se ve atrapada entre su búsqueda de la felicidad personal y la ejecución de los planes de David.
-                </p>
-                <br /><br />
-
-                <h3>Trabajos destacados</h3>
-                <p>
-                    Plaza produjo y protagonizó Ingrid Goes West, que se estrenó en el Festival de Cine de Sundance de 2017 y ganó el premio Waldo Salt Screenwriting Award. La película se proyectó en el Festival de Cine de Londres de 2017. Ingrid Goes West también ganó el premio Independent Spirit a la mejor ópera prima y fue nominada a mejor primer guión.
+        <article id="impar" class="container3">
+            <div class="container">
+                <div class="texto">
+                    <h2>Aubrey Plaza</h2>
+                    <p>
+                        Aubrey Plaza interpreta al amigo de David, "Lenny Busker". A pesar de una vida de abuso de drogas y alcohol, Lenny, la amiga de David, sabe que cualquier día su vida va a cambiar, lo que le da la energía agradable del optimista imposible. En su nueva posición como mano derecha de David, Lenny se ve atrapada entre su búsqueda de la felicidad personal y la ejecución de los planes de David.
+                    </p>
                     <br /><br />
-                    En febrero de 2019, Plaza fue sede de la 34ª edición de los premios Film Independent Spirit.
-                    <br /><br />
-                    Por su memorable papel de “Lenny” en Legion de Noah Hawley, Plaza fue nominada a un premio MTV Movie & TV Award 2018 como Mejor Villano y a un Premio Imagen como Mejor Actriz. A continuación, protagonizará junto a Brian Tyree Henry la nueva versión de Child's Play de MGM.
-                    <br /><br />
-                    Durante siete temporadas, Plaza interpretó a la asistente de bajo rendimiento "April Ludgate" en la serie de comedia Parks and Recreation, nominada al Emmy®, junto a sus coprotagonistas Amy Poehler, Nick Offerman y Chris Pratt. La actuación de Plaza le valió una nominación al American Comedy Award 2014 como Mejor Actriz de Reparto de Comedia y nominaciones al Premio Imagen como Mejor Actriz de Reparto/Televisión en 2010, 2012, 2013 y 2014.
-                    <br /><br />
-                    Protagonizó la célebre ópera prima de Colin Trevorrow, Safety Not Guaranteed, junto a Mark Duplass y Jake Johnson. La película, producida por Jay y Mark Duplass, se estrenó en el Festival de Cine de Sundance de 2012 y recibió el Premio Film Independent Spirit de 2013 al Mejor Primer Guión y una nominación a Mejor Primera Película. Por su actuación en la película, Plaza ganó el Premio ALMA 2012 a la Actriz de Película Favorita - Comedia/Musical.
-                    <br /><br />
-                    Otros créditos cinematográficos incluyen The Little Hours (productor) y Life After Beth de Jeff Baena, An Evening with Beverly Luff Linn, Mike and Dave Need Wedding Dates, Ned Rifle, The To Do List, Damsels in Distress, Scott Pilgrim vs. Mundo y gente divertida de Judd Apatow.
-                </p>
-
+                </div>
+                <div id="aubrey" class="img-container"></div>
             </div>
-            <div id="aubrey" class="img-container"></div>
+            <div class="container2">
+                <div class="texto2">
+                    <h3>Trabajos destacados</h3>
+                    <p>
+                        Plaza produjo y protagonizó Ingrid Goes West, que se estrenó en el Festival de Cine de Sundance de 2017 y ganó el premio Waldo Salt Screenwriting Award. La película se proyectó en el Festival de Cine de Londres de 2017. Ingrid Goes West también ganó el premio Independent Spirit a la mejor ópera prima y fue nominada a mejor primer guión.
+                        <br /><br />
+                        En febrero de 2019, Plaza fue sede de la 34ª edición de los premios Film Independent Spirit.
+                        <br /><br />
+                        Por su memorable papel de “Lenny” en Legion de Noah Hawley, Plaza fue nominada a un premio MTV Movie & TV Award 2018 como Mejor Villano y a un Premio Imagen como Mejor Actriz. A continuación, protagonizará junto a Brian Tyree Henry la nueva versión de Child's Play de MGM.
+                        <br /><br />
+                        Durante siete temporadas, Plaza interpretó a la asistente de bajo rendimiento "April Ludgate" en la serie de comedia Parks and Recreation, nominada al Emmy®, junto a sus coprotagonistas Amy Poehler, Nick Offerman y Chris Pratt. La actuación de Plaza le valió una nominación al American Comedy Award 2014 como Mejor Actriz de Reparto de Comedia y nominaciones al Premio Imagen como Mejor Actriz de Reparto/Televisión en 2010, 2012, 2013 y 2014.
+                        <br /><br />
+                        Protagonizó la célebre ópera prima de Colin Trevorrow, Safety Not Guaranteed, junto a Mark Duplass y Jake Johnson. La película, producida por Jay y Mark Duplass, se estrenó en el Festival de Cine de Sundance de 2012 y recibió el Premio Film Independent Spirit de 2013 al Mejor Primer Guión y una nominación a Mejor Primera Película. Por su actuación en la película, Plaza ganó el Premio ALMA 2012 a la Actriz de Película Favorita - Comedia/Musical.
+                        <br /><br />
+                        Otros créditos cinematográficos incluyen The Little Hours (productor) y Life After Beth de Jeff Baena, An Evening with Beverly Luff Linn, Mike and Dave Need Wedding Dates, Ned Rifle, The To Do List, Damsels in Distress, Scott Pilgrim vs. Mundo y gente divertida de Judd Apatow.
+                    </p>
+                </div>
+            </div>
         </article>
     </section>
 
