--- a/productores.html
+++ b/productores.html
@@ -50,10 +50,12 @@
         </article>
         <article class="container">
             <div  class="container2">
-                <div id="noah" class="img-container"></div><p>Creator / Executive Producer / Writer / Director (Ep. 308)</p>
+                <div id="noah" class="img-container"></div>
             </div>
             <div class="texto">
                 <h2>Noah Hawley</h2>
+                <p>Creator / Executive Producer / Writer / Director (Ep. 308)</p>
+                <br /><br />
                 <p>
                     El galardonado Noah Hawley es uno de los autores más destacados y narradores más versátiles que trabajan en la televisión, el cine y la literatura. Hawley equilibra el arte de contar historias cinematográficas e inolvidables basadas en personajes que perduran mucho después de haber estado inmerso en ellas.
                     <br /><br />
@@ -71,6 +73,8 @@
 
             <div class="texto">
                 <h2>John Cameron</h2>
+                <p>Executive Producer / Director (Eps. 303, 306 & 308)</p>
+                <br /><br />
                 <p>
                     Además de su trabajo en Legion, John Cameron es productor ejecutivo de la serie limitada Fargo, aclamada por la crítica, para FX, por la que ganó varios premios, incluidos un Emmy®, un Golden Globe® y un premio Peabody.
                     <br /><br />
@@ -88,15 +92,17 @@
                 </p>
             </div>
             <div class="container2">
-                <div id="john" class="img-container"></div><p>Executive Producer / Director (Eps. 303, 306 & 308)</p>
+                <div id="john" class="img-container"></div>
             </div>
         </article>
         <article class="container">
             <div class="container2">
-                <div id="lauren" class="img-container"></div><p>Executive Producer</p>
+                <div id="lauren" class="img-container"></div>
             </div>
             <div class="texto">
                 <h2>Lauren Shuler Donner</h2>
+                <p>Executive Producer</p>
+                <br /><br />
                 <p>
                     Durante las últimas tres décadas y media, Lauren Shuler Donner se ha consolidado como una de las productoras más exitosas y versátiles de Hollywood. Hasta la fecha, sus películas han recaudado 5 mil millones de dólares en todo el mundo.
                     <br /><br />
@@ -107,25 +113,6 @@
                     En 2000, Shuler Donner comenzó una nueva franquicia con X-Men y siguió en 2003 con X2. La película no sólo recaudó 406 millones de dólares a nivel internacional, sino que también fue la única secuela de 2003 que recibió elogios de la crítica. X-Men: The Last Stand se estrenó en mayo de 2006 y un mes después iba camino de alcanzar la marca de los 500 millones de dólares en todo el mundo.
                     <br /><br />
                     Shuler Donner también produjo La vida secreta de las abejas para Fox Searchlight, escrita y dirigida por Gina Prince-Bythewood y protagonizada por Queen Latifah, Dakota Fanning, Jennifer Hudson, Alicia Keys, Sophie Okonedo y Paul Bettany. Esta película ganó varios premios People's Choice Awards, incluida la película favorita y la mejor película dramática. También ganó el premio a la Mejor Película en los NAACP Image Awards.
-                    <br /><br />
-                    La siguiente película de Shuler Donner fue X-Men: First Class, que recibió elogios de la crítica, The Wolverine y X-Men: Days of Future Past, que recibió elogios de la crítica y recaudó 748 millones de dólares en todo el mundo.
-                    <br /><br />
-                    Tardaron seis años en realizarse, pero en 2016, Deadpool, producida por Shuler Donner y Simon Kinberg, se estrenó y recaudó la friolera de 782.612.155 dólares.
-                    <br /><br />
-                    X-Men: Age of Apocalypse fue otro éxito en 2016 con una recaudación mundial de 542.721.987 dólares. Shuler Donner asumió un papel más directivo en esa película, ya que ya había producido un total de nueve películas de X-Men y Wolverine.
-                    <br /><br />
-                    Shuler Donner fue productor ejecutivo de The Gifted para FOX con Matt Nix.
-                    <br /><br />
-                    También tiene muchos proyectos en desarrollo para televisión y largometrajes, incluida una adaptación a la pantalla grande de The Absolutely True Diary of a Part-Time Indian de Sherman Alexie.
-                    <br /><br />
-                    A continuación: musicales de Broadway basados ​​en sus películas Dave y La vida secreta de las abejas.
-                    <br /><br />
-                    In October 2008, both Shuler Donner and her husband Richard Donner were awarded stars next to each other on the Hollywood Walk of Fame. She and Richard were also honored by The American Cancer Society in June of 2006 and by Lupus L.A. in 2008. They were also awarded Lifetime Achievement Awards at the Ojai Film Festival in November of 2008 and honored by the Women’s Guild of Cedars Sinai Hospital in 2013.
-                    <br /><br />
-                    Shuler Donner was recognized for her body of work in 2001 by Premiere magazine with the Producer Icon Award, and was recognized by Variety with a “Billion Dollar Producer” special issue. In June 2006, she received the prestigious Crystal Award from Women in Film, and received another Crystal Award in 2016.
-                    <br /><br />
-                    Shuler Donner is a dedicated philanthropist who thrives on giving back to the community. She was on the board of directors for Hollygrove Children’s Home until it merged with EMQ in 2006. She has been on the advisory board of Women in Film, was a long-time member of the advisory board of TreePeople and is a past board member of Planned Parenthood Los Angeles. She has been serving on the advisory board of Lupus L.A. for the past 10 years, has served as the Treasurer for the Producers Guild of America and is on the executive committee of the Producer’s Branch of the Academy of Motion Picture Arts and Sciences.
-
                 </p>
             </div>
         </article>
@@ -135,6 +122,8 @@
 
             <div class="texto">
                 <h2>Simon Kinberg</h2>
+                <p>Executive Producer</p>
+                <br /><br />
                 <p>
                     Simon Kinberg se ha consolidado como uno de los cineastas más prolíficos de Hollywood, habiendo escrito y producido proyectos para algunas de las franquicias más exitosas de la era moderna. Sus películas han recaudado más de 7 mil millones de dólares en todo el mundo.
                     <br /><br />
@@ -147,18 +136,11 @@
                     2015 marcó cuatro estrenos cinematográficos para Kinberg. Volvió a formar equipo con Neill Blomkamp para producir Chappie; produjo Cenicienta, nominada al Premio de la Academia; coescribió y produjo Los Cuatro Fantásticos y produjo The Martian, que recaudó más de 630 millones de dólares en todo el mundo, ganó dos Globos de Oro, incluido el de Mejor Película, y fue nominado a siete Premios de la Academia, incluido el de Mejor Película.
                     <br /><br />
                     Kinberg produjo Deadpool (2016), el éxito de taquilla nacional e internacional que batió récords. Se convirtió en la película con clasificación R más taquillera de todos los tiempos a nivel mundial, ganó dos premios Critics' Choice Awards, incluido el de Mejor Película - Comedia y recibió nominaciones a los Globos de Oro, WGA y PGA.
-                    <br /><br />
-                    Escribió y produjo X-Men: Apocalipsis (2016) y produjo Logan (2017), que fue seleccionada como la película de clausura del Festival de Cine de Berlín y abrió como número uno en taquilla. Fue nombrada una de las 10 mejores películas del año por la Junta Nacional de Revisión, obtuvo tres nominaciones a los premios Critics' Choice Awards y una nominación al Premio de la Academia. Produjo Murder on the Orient Express (2017) y Deadpool 2 (2018), que igualó el éxito de la primera película y marcó su decimocuarta película en abrir el número uno en taquilla.
-                    <br /><br />
-                    Kinberg hará su debut como director con X-Men: Dark Phoenix (2019), que también escribió y produjo. Además, está produciendo The New Mutants; Gambito; el remake de Logan's Run, que también dirigirá; 355; Muerte en el Nilo; Artemis y la nueva versión de The Dirty Dozen.
-                    <br /><br />
-                    Genre Films, la productora de Kinberg, tiene múltiples proyectos de televisión, incluida una próxima serie de ciencia ficción sin título con Apple (creador y coguionista), Designated Survivor (productor ejecutivo), Legion (productor ejecutivo) y The Twilight Zone (cocreador con Jordan Peele, productor ejecutivo y director del final de la primera temporada). También fue productor ejecutivo de The Gifted en FOX.
-                    <br /><br />
-                    Kinberg se desempeñó como consultor en Star Wars: Episodio VII y Rogue One, y fue el creador y productor ejecutivo del programa animado Star Wars: Rebels.
+
                 </p>
             </div>
             <div class="container2">
-                <div id="simon" class="img-container"></div><p>Executive Producer</p>
+                <div id="simon" class="img-container"></div>
             </div>
         </article>
         <article class="container">
@@ -167,6 +149,8 @@
             </div>
             <div class="texto">
                 <h2>Jeph Loeb</h2>
+                <p>Executive Producer / EVP, Head of Marvel Television</p>
+                <br /><br />
                 <p>
                     Jeph Loeb, director de televisión de Marvel, es un escritor y productor nominado al Emmy® y ganador del premio Peabody.
                     <br /><br />
