--- a/sydneybarrett.html
+++ b/sydneybarrett.html
@@ -53,23 +53,29 @@
                 </p>
             </div>
         </article>
-        <article  id="impar" class="container" >
-            <div class="texto">
-                <h2>Rachel Keller</h2>
-                <p>
-                    Rachel Keller interpreta a "Sydney 'Syd' Barrett". Autosuficiente y astuta en la calle, Syd usó su comportamiento mordaz para mantener a la gente a distancia hasta que se enamoró de David, un poderoso mutante. Tuvieron un romance durante siglos, hasta que Syd fue traicionada por el hombre en el que más confiaba. Ahora dedicada a sí misma por encima de todos los demás, Syd reconoce que su ex nunca fue el héroe de esta historia. Es ella.
-                </p>
-                <br /><br />
-
-                <h3>Trabajos destacados</h3>
-                <p>
-                    Rachel Keller, nativa de Minnesota, tuvo un papel destacado en la segunda entrega de la serie de antología Fargo, ganadora del Globo de Oro® de FX, interpretando a "Simone Gerhardt". En su próximo trabajo, se la puede ver en un arco recurrente en la nueva serie de Netflix, The Society, y en la película In the Shadow of the Moon, también para Netflix.
+        <article id="impar" class="container3">
+            <div class="container">
+                <div class="texto">
+                    <h2>Rachel Keller</h2>
+                    <p>
+                        Rachel Keller interpreta a "Sydney 'Syd' Barrett". Autosuficiente y astuta en la calle, Syd usó su comportamiento mordaz para mantener a la gente a distancia hasta que se enamoró de David, un poderoso mutante. Tuvieron un romance durante siglos, hasta que Syd fue traicionada por el hombre en el que más confiaba. Ahora dedicada a sí misma por encima de todos los demás, Syd reconoce que su ex nunca fue el héroe de esta historia. Es ella.
+                    </p>
                     <br /><br />
-                    Keller estudió en la Universidad Carnegie Mellon y en el Conservatorio de Artistas Escénicos de Saint Paul. También experimenta como fotógrafa.
-                </p>
-
+                </div>
+                <div id="rachel" class="img-container"></div>
             </div>
-            <div id="rachel" class="img-container"></div>
+            <div class="container2">
+                <div class="texto2">
+                    <h3>Trabajos destacados</h3>
+                    <p>
+                        Rachel Keller, nativa de Minnesota, tuvo un papel destacado en la segunda entrega de la serie de antología Fargo, ganadora del Globo de Oro® de FX, interpretando a "Simone Gerhardt". En su próximo trabajo, se la puede ver en un arco recurrente en la nueva serie de Netflix, The Society, y en la película In the Shadow of the Moon, también para Netflix.
+                        <br /><br />
+                        Keller estudió en la Universidad Carnegie Mellon y en el Conservatorio de Artistas Escénicos de Saint Paul. También experimenta como fotógrafa.
+                    </p>
+                </div>
+            </div>
+
+
         </article>
     </section>
 
